Fixed wrapping of a link text longer han single row

--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,17 @@ a.link:hover {
     margin-top: 0;
 }
 
+.name {
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal;
+}
+
+.lock {
+    width:32px;height:32px;
+    vertical-align: bottom;
+}
+
 .handbook {
     background-size: cover;
 }
